2007-01-29  Pierre Chifflier  <pollux@wzdftpd.net>

	* feature: add option "experimental" to enable untested code
	* feature: add option "auto crc" to calculate CRC32 during transfer
	* feature: optimize RETR and STOR

2007-01-19  Pierre Chifflier  <pollux@wzdftpd.net>

	* bugfix: use group default perms when creating user (Closes: #0058)
	* bugfix: don't loop indefinitely if no PASV port was found (Closes: #0068)
	* bugfix: make code to parse cookies threadsafe (Closes: #0067)
	* feature: add option "disable core" to prevent creating core dump on crash

2007-01-12  Pierre Chifflier  <pollux@wzdftpd.net>

	* bugfix: really use loglevel to suppress messages

2007-01-04  Pierre Chifflier  <pollux@wzdftpd.net>

	* bugfix: truncate file after upload (and not when opening). This
	closes a nasty bug introduced when fixing #0065: trying to make
	concurrents uploads corrupts the file

2007-01-03  Pierre Chifflier  <pollux@wzdftpd.net>

	* feature: new flag F, to deny site-to-site transfer for a user

2006-12-12  Pierre Chifflier  <pollux@wzdftpd.net>

	* feature: new command SITE SHOWLOG, to display the most recent log messages

2006-12-07  Pierre Chifflier  <pollux@wzdftpd.net>

	* --- svn commit TAG: rel-0-8-1

2006-11-30  Pierre Chifflier  <pollux@wzdftpd.net>

	* bugfix: truncate file when overwriting (Closes: #0065)

2006-11-16  Pierre Chifflier  <pollux@wzdftpd.net>

	* bugfix: send reply 426 when data connection times out (Closes: #0062)
	* feature: add support for IDNT command, and bnc_list configuration
	command (used by bnc)

2006-11-13  Pierre Chifflier  <pollux@cpe.fr>

	* feature: kill clients instantly when exiting

2006-10-24  Pierre Chifflier  <pollux@cpe.fr>

	* feature: add config variable [sfv] create_symlinks to create
	symbolic links for incomplete files (Closes: #0055)
	* bugfix: segfault when removing incomplete indicator on windows [sfv]

2006-10-19  Pierre Chifflier  <pollux@cpe.fr>

	* feature: add event WIPE and PREWIPE
