@@ -1,3 +1,7 @@
+2007-02-06  Pierre Chifflier  <pollux@wzdftpd.net>
+
+	* bugfix: do not convert to ipv6 if family is ipv4 in pre_ip_check (Closes: #0071)
+
 2007-01-29  Pierre Chifflier  <pollux@wzdftpd.net>
 
 	* feature: add option "experimental" to enable untested code
